--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.9'
 
 services:
   web:
-    image: "trainwithshubham/node-app-test-new:latest"
+    image: "lalitjain/node-app-todo"
     ports:
       - "8000:8000"
